--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "learn es6",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 51186 -c-1 ./",
+    "gulp": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +20,37 @@
   },
   "homepage": "https://github.com/KhokhlovAnton/LearnJSES6#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1"
+    "bootstrap.min.js": "^3.3.5",
+    "del": "^3.0.0",
+    "eslint": "^4.19.1",
+    "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.2.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^3.9.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-express": "^0.3.5",
+    "gulp-jscs": "^4.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-server-livereload": "^1.9.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
+    "http-server": "^0.11.1"
+  },
+  "dependencies": {
+    "angular-base64": "^2.0.5",
+    "angular-chart.js": "^1.1.1",
+    "angular-loader": "^1.6.9",
+    "angular-mocks": "^1.6.9",
+    "angular-route": "^1.6.9",
+    "angular-ui": "^1.0.0",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angularjs": "0.0.1",
+    "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2"
   }
 }
