--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/KhokhlovAnton/LearnJSES6#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-preset-env": "^1.6.1",
@@ -33,6 +34,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.3",
     "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-express": "^0.3.5",
     "gulp-jscs": "^4.1.0",
     "gulp-rename": "^1.2.2",
