--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "gulp-server-livereload": "^1.9.2",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "nodemon": "^1.17.2"
   },
   "dependencies": {
     "angular-base64": "^2.0.5",
